1. 調整網址路由路徑   2. 增加付款驗証格式與資料  3. 增加文件說明
